--- a/index.html
+++ b/index.html
@@ -5,14 +5,14 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="styles.css">
-  <title>Rock, Paper, Scissors Game</title>
+  <title>Rock, Scissors, Paper Game</title>
 </head>
 
 <body>
   <div class="container">
-    <h1>Rock, Paper, Scissors</h1>
+    <h1>Rock, Scissors, Paper</h1>
     <label for="playerChoice">Your Choice:</label>
-    <input type="text" id="playerChoice" placeholder="Enter 'Rock', 'Paper', or 'Scissors'">
+    <input type="text" id="playerChoice" placeholder="Enter 'Rock', 'Scissors', or 'Paper'">
     <button onclick="playGame()">Play</button>
     <div id="result"></div>
   </div>
